--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  min-height: 100vh;
+  @apply bg-neutral-100 text-neutral-700
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .main-container {
+    @apply flex flex-col justify-center items-center w-full h-full p-10
   }
-}
+  .text-h1{
+    @apply text-2xl font-extrabold text-center lg:text-4xl
+  }
+  .text-h2{
+    @apply text-center font-semibold lg:text-2xl
+  }
+} 
